--- a/Crunchers/Views/Shared/_LoginPartial.cshtml
+++ b/Crunchers/Views/Shared/_LoginPartial.cshtml
@@ -36,7 +36,7 @@ function getCity(city){
 
         <ul class="nav navbar-nav navbar-right">
 
-            <li><a id ="cityItem" href="javascript:location.href='/City?currentCity='+document.getElementById('cityItem').innerText"><script>getCity('@(new CityModel().GetCityById(new UserModel().GetUser(User.Identity?.GetUserId())?.CityId)?.NameRu)')</script></a></li>
+            <li><a id ="cityItem" href="javascript:location.href='/City?currentCity='+document.getElementById('cityItem').innerText"><script>getCity('@(new CityModel().GetCityById(new UserModel().GetUser(User?.Identity?.GetUserId())?.CityId)?.NameRu)')</script></a></li>
             <li><a href="javascript:location.href='/ShoppingCart?localCartJson='+localStorage.getItem('localCart')">Корзина</a></li>
             @if (User.IsInRole("admin"))
             {
