--- a/Crunchers/Views/Catalog/Product.cshtml
+++ b/Crunchers/Views/Catalog/Product.cshtml
@@ -116,7 +116,7 @@ function DeleteMark(markId) {
                     <img src="@product.ImageLink" alt="Изображение отсутствует " width="100" height="100"/>
                 </a>
                 <a href="/Catalog/Product?productId=@product.ProductId">@product.ProductName</a>
-                <text>@product.ProductId</text>
+                <text>@product.ProductPrice</text>
             </form>
         }
     </form>
