--- a/Crunchers/Views/Order/ShowOrderInfo.cshtml
+++ b/Crunchers/Views/Order/ShowOrderInfo.cshtml
@@ -47,6 +47,7 @@
                 }
 
             </form>
+            <strong>@order.Price руб.</strong>
             <hr/>
             @foreach (var product in Model.Item2)
             {
