--- a/Crunchers/Views/Admin/ManageAllCharacteristics.cshtml
+++ b/Crunchers/Views/Admin/ManageAllCharacteristics.cshtml
@@ -4,6 +4,9 @@
 </div>
 <script>
 function UpdateCharacteristic(characteristicId) {
+    let inpObj = document.getElementById("Name="+characteristicId);
+          if (!inpObj.checkValidity()) {
+          } else {
     console.log(characteristicId);
     let characteristicName=document.getElementById('Name='+characteristicId).value;
     let characteristicType=document.getElementById('Type='+characteristicId).value;
@@ -27,7 +30,7 @@ function UpdateCharacteristic(characteristicId) {
               
           }
       });
-}
+}}
 function DeleteCharacteristic(characteristicId) {
     $("#LoadingImage").show();
    $.ajax({
@@ -52,7 +55,7 @@ function DeleteCharacteristic(characteristicId) {
 @foreach (var characteristic in Model)
 {
     <form>
-        <input id="Name=@characteristic.CharacteristicId" placeholder="Введите новое название характеристики" value="@characteristic.CharacteristicName"/>
+        <input id="Name=@characteristic.CharacteristicId" placeholder="Введите новое название характеристики" value="@characteristic.CharacteristicName" minlength="3" required/>
         <input id="Type=@characteristic.CharacteristicId" value="@characteristic.CharacteristicType" readonly/>
 
         <input id="Unit=@characteristic.CharacteristicId" placeholder="Введите единицу измерения" value="@characteristic.Unit"/>
