--- a/Crunchers/Views/Admin/ManageProduct.cshtml
+++ b/Crunchers/Views/Admin/ManageProduct.cshtml
@@ -5,6 +5,9 @@
 <script>
     let urlParams = new URLSearchParams(window.location.search);
     function ChangeProduct() {
+         let inpObj = document.getElementById("productNameInput");
+                                  if (!inpObj.checkValidity()) {
+                                  } else {
        var values = [];
        var characteristicNodes = document.getElementById('newCharacteristics').getElementsByTagName('input');
        var i;
@@ -35,13 +38,13 @@
                     location.reload(); 
                 }
             });
-    }
+    }}
 </script>
 <h1>@Model.Products.FirstOrDefault().ProductName</h1>
 @{
     <form>
         <input id="productImageInput" placeholder="Вставьте ссылку на изображение" value="@Model.Products.FirstOrDefault().ImageLink"/>
-        <input id="productNameInput" placeholder="Введите название товара" value="@Model.Products.FirstOrDefault().ProductName"/>
+        <input id="productNameInput" placeholder="Введите название товара" value="@Model.Products.FirstOrDefault().ProductName" minlength="3" required/>
         <input id="productPriceInput" placeholder="Введите цену товара" value="@Model.Products.FirstOrDefault().ProductPrice"/>
     </form>
     <hr/>
