--- a/Crunchers/Views/Shared/_LoginPartial.cshtml
+++ b/Crunchers/Views/Shared/_LoginPartial.cshtml
@@ -1,27 +1,21 @@
 ﻿@using System.Web.Script.Serialization
 @using Crunchers.Models
 @using Microsoft.AspNet.Identity
-<script src="//js.maxmind.com/js/apis/geoip2/v2.1/geoip2.js" type="text/javascript"></script>
 <script>
 function getCity(city){
-    if( city!=undefined && city!="")
+    if( city!=null && city!="")
         {
             localStorage.setItem('city',city);
         }
-    if(localStorage.getItem('city')!=null && localStorage.getItem('city')!="undefined")
+    if(localStorage.getItem('city')!=null && localStorage.getItem('city')!="")
                  {
                    document.getElementById('cityItem').innerText=localStorage.getItem('city');  
                  }
     else {
-         let onSuccess = function(location){
-                  document.getElementById('cityItem').innerText=location.city.names.ru;
-                  localStorage.setItem('city',location.city.names.ru);
-            };
+        $.get( "https://api.sypexgeo.net/", function( data ) {
             
-            let onError = function(error){
-               document.getElementById('cityItem').innerText='';
-            };
-             return geoip2.city(onSuccess, onError);
+            document.getElementById('cityItem').innerText=data.city.name_ru; 
+          });
     }
        
     
