--- a/Crunchers/Views/Admin/ManageCategoryProducts.cshtml
+++ b/Crunchers/Views/Admin/ManageCategoryProducts.cshtml
@@ -86,7 +86,7 @@
             <br/>
         }
     </div>
-    <a onclick=" AddProduct()">Add Product</a>
+    <a onclick=" AddProduct()">Добавить продукт</a>
 </form>
 <hr/>
 @{
