--- a/Crunchers/Views/Admin/ManageShop.cshtml
+++ b/Crunchers/Views/Admin/ManageShop.cshtml
@@ -2,7 +2,8 @@
 
 <h1>Меню администратора</h1>
 <ul style="list-style-type:disc;">
-    <li>@Html.ActionLink("Управление заказами","ManageOrders")</li>
+    <li>@Html.ActionLink("Просмотр всех заказов","ManageAllOrders")</li>
+    <li>@Html.ActionLink("Управление активными заказами","ManageActiveOrders")</li>
     <li>@Html.ActionLink("Управление категориями","ManageCategories")</li>
     <li>@Html.ActionLink("Управление товарами","ManageAllProducts")</li>
     <li>@Html.ActionLink("Управление характеристиками","ManageAllCharacteristics")</li>
