--- a/Crunchers/Views/Catalog/Product.cshtml
+++ b/Crunchers/Views/Catalog/Product.cshtml
@@ -143,7 +143,7 @@ function DeleteMark(markId) {
             <label for="review@(review.x.ReviewId)">@review.x.UserName :</label>
             <input id="review@(review.x.ReviewId)" value="@review.x.ReviewText" style="border: 0" readonly="readonly"/>
             <br/>
-            <text>отзыв оставлен @review.x.ReviewDate</text>
+            <text>отзыв оставлен @review.x.ReviewDate.ToString("dd/MM/yyyy HH:mm:ss")</text>
             <text>@review.y.Mark / 10</text>
             if (review.x.UserName == username)
             {
