--- a/Crunchers/Views/Admin/ManageAllProducts.cshtml
+++ b/Crunchers/Views/Admin/ManageAllProducts.cshtml
@@ -56,15 +56,157 @@
               });
         }
 </script>
-@{
-    var productGroup = Model.Products.GroupBy(x => x.ProductId);
-    foreach (var product in productGroup)
-    {
-        <text>Product Id = @product.Key, Product Name = @product.Select(x => x.ProductName).ToList().First()</text> <text> / </text>
-                                                                                                                            
-        <a href="/Admin/ManageProduct?productId=@product.Key&categoryId=@product.Select(x=>x.CategoryId).FirstOrDefault()">Открыть информацию о продукте</a> <text> / </text>
-        <a onclick="DeleteProduct(@(product.Key))">Удалить товар</a>
+
+<style>
+      input:focus {
+        outline: none;
+      }
+      
+      button, input {
+        overflow: visible;
+      }
+      
+      button, input, optgroup, select, textarea {
+        margin: 0;
+        font-family: inherit;
+        font-size: inherit;
+        line-height: inherit;
+      }
+    
+      
+
+      .clean-navbar.fixed-top + .page {
+        padding-top: 5rem;
+      }
+      
+      .clean-navbar.fixed-top + .page {
+        padding-top: 62px;
+      }
+      
+      body {
+        margin: 0;
+        font-family: Montserrat,sans-serif;
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1.5;
+        color: #212529;
+        text-align: left;
+        background-color: #fff;
+      }
+      
+      .clean-block.dark {
+        background-color: #ffffff;
+      }
+      
+      .container {
+        max-width: 1140px;
+      } 
+      
+      .container {
+        width: 100%;
+        padding-right: 15px;
+        padding-left: 15px;
+        margin-right: auto;
+        margin-left: auto;
+      }
+      
+      .clean-block .block-heading {
+        padding-top: 50px;
+        margin-bottom: 40px;
+        text-align: center;
+      }
+      
+      .clean-block .block-heading {
+        padding-top: 80px;
+      }
+      
+      .clean-block .block-heading {
+        padding-top: 50px;
+        margin-bottom: 40px;
+        text-align: center;
+      }
+      
+      .text-info {
+        color: orange!important;
+        font-weight: normal !important;
+      }
+      
+      .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+        margin-bottom: .5rem;
+        font-weight: 500;
+        line-height: 1.2;
+      }
+      
+      h1, h2, h3, h4, h5, h6 {
+        margin-top: 0;
+        margin-bottom: .5rem;
+      }
+      
+      .clean-block .block-heading {
+        padding-top: 50px;
+        margin-bottom: 40px;
+        text-align: center;
+      }
+      
+      .clean-block .block-content {
+        padding: 40px;
+      }
+      
+      .clean-block .block-content, .clean-block .content {
+        box-shadow: 0 2px 10px rgba(0,0,0,.075);
+        background-color: #fff;
+      }
+      
+      .clean-block.clean-faq .faq-item {
+        margin-bottom: 20px;
+      }
+      
+      .my-class {
+        color: orange !important;
+      }     
+      
+      .form-group {
+      text-align: center;
+      border-top: 2px solid orange!important;
+                background-color: #ffffff;
+                max-width: 500px;
+                margin: auto;
+                padding: 40px;
+                box-shadow: 0 2px 10px rgba(0,0,0,.075);
+      }
+  
+</style>
+
+  
+  <section class="clean-block clean-blog-list dark">
+    <div class="container">
+      <div class="block-heading">
+        <h1 class="text-info">Управление товарами</h1>
+      </div>
+    
+    @{
+      var productGroup = Model.Products.GroupBy(x => x.ProductId);
+      foreach (var product in productGroup)
+      {
+        <form>
+          <div class="form-group">
+            <h4>
+              <p>
+                <label style="font-weight: inherit !important;" class="text-info">Id: @product.Key </label>
+              </p></h4>
+
+            <h4>
+              <p><label style="font-weight: inherit !important;" class="text-info">Наименование продукта:  @product.Select(x => x.ProductName).ToList().First()</label>
+              </p></h4>
+
+            <a class="my-class" href="/Admin/ManageProduct?productId=@product.Key&categoryId=@product.Select(x=>x.CategoryId).FirstOrDefault()"><h4>Открыть информацию о продукте</h4></a><br/>
+            <a class="my-class" onclick="DeleteProduct(@(product.Key))"><h4>Удалить товар</h4></a><br/>
+          </div>
+        </form>
         <br/>
-        <br/>
+      }
     }
-}
+      
+    </div>
+  </section>
+    
