--- a/Crunchers/Views/Admin/ManageAllCharacteristics.cshtml
+++ b/Crunchers/Views/Admin/ManageAllCharacteristics.cshtml
@@ -68,13 +68,16 @@ function DeleteCharacteristic(characteristicId) {
         outline: none;
       }
       
-      input {
+      .fox {
         font-size: 18px;
         padding: 10px 10px 10px 5px;
         display: block;
         width: 300px;
         border: none;
         border-bottom: 1px solid orange !important;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
       }
       
       button, input {
@@ -110,7 +113,7 @@ function DeleteCharacteristic(characteristicId) {
       }
       
       .clean-block.dark {
-        background-color: #f6f6f6;
+              background-color: #ffffff;
       }
       
       .container {
@@ -178,7 +181,20 @@ function DeleteCharacteristic(characteristicId) {
       
       .my-class {
         color: orange !important;
-      }     
+      }  
+      
+      .form-group {
+            text-align: center;
+            border-top: 2px solid orange!important;
+                      background-color: #ffffff;
+                      max-width: 500px;
+                      margin: auto;
+                      padding: 40px;
+                      box-shadow: 0 2px 10px rgba(0,0,0,.075);
+                      
+        margin-left: auto;
+        margin-right: auto;
+            }  
   
 </style>
 <section class="clean-block clean-blog-list dark">
@@ -189,33 +205,30 @@ function DeleteCharacteristic(characteristicId) {
     
        @foreach (var characteristic in Model)
        {
-         <div class="block-content">
-           <div class="clean-blog clean-form dark">
              <form>
-             <div class="col">
-               <h4>
-                 <p>
-                   <label style="font-weight: inherit !important;" class="text-info" for="Name=@characteristic.CharacteristicId">Название характеристики</label>
-                   <input id="Name=@characteristic.CharacteristicId" placeholder="Введите новое название характеристики" value="@characteristic.CharacteristicName" minlength="3" required/>
-                 </p></h4>
+               <div class="form-group">
+                 <h4>
+                   <p>
+                     <label style="font-weight: inherit !important;" class="text-info" for="Name=@characteristic.CharacteristicId">Название характеристики</label>
+                     <input class="fox" id="Name=@characteristic.CharacteristicId" placeholder="Введите новое название характеристики" value="@characteristic.CharacteristicName" minlength="3" required/>
+                   </p></h4>
 
-               <h4>
-                 <p><label style="font-weight: inherit !important;" class="text-info" for="Type=@characteristic.CharacteristicId">Тип значения</label>
-                   <input id="Type=@characteristic.CharacteristicId" value="@characteristic.CharacteristicType" readonly/>
-                 </p></h4>
+                 <h4>
+                   <p><label style="font-weight: inherit !important;" class="text-info" for="Type=@characteristic.CharacteristicId">Тип значения</label>
+                     <input class="fox" id="Type=@characteristic.CharacteristicId" value="@characteristic.CharacteristicType" readonly/>
+                   </p></h4>
 
-               <h4>
-                 <p><label style="font-weight: inherit !important;" class="text-info" for="Unit=@characteristic.CharacteristicId">Единица измерения</label>
-                   <input id="Unit=@characteristic.CharacteristicId" value="@characteristic.Unit"/></p></h4>
+                 <h4>
+                   <p><label style="font-weight: inherit !important;" class="text-info" for="Unit=@characteristic.CharacteristicId">Единица измерения</label>
+                     <input class="fox" id="Unit=@characteristic.CharacteristicId" value="@characteristic.Unit"/></p></h4>
 
-               <a class="my-class" href="/Admin/ManageFiltersByCharacteristicId?characteristicId=@characteristic.CharacteristicId"><h4>Управление фильтрами харакеристики</h4></a><br/>
-               <a class="my-class" onclick=" UpdateCharacteristic(@characteristic.CharacteristicId)"><h4>Изменить характеристику</h4></a><br/>
-               <a class="my-class" onclick=" DeleteCharacteristic(@characteristic.CharacteristicId)"><h4>Удалить характеристику</h4></a><br/>
+                 <a class="my-class" href="/Admin/ManageFiltersByCharacteristicId?characteristicId=@characteristic.CharacteristicId"><h4>Управление фильтрами харакеристики</h4></a><br/>
+                 <a class="my-class" onclick=" UpdateCharacteristic(@characteristic.CharacteristicId)"><h4>Изменить характеристику</h4></a><br/>
+                 <a class="my-class" onclick=" DeleteCharacteristic(@characteristic.CharacteristicId)"><h4>Удалить характеристику</h4></a><br/>
 
-             </div>
+               </div>
              </form>
-           </div>
-             </div>
+         <br/>
        }
       
   </div>
