--- a/Crunchers/Views/Admin/ManageShop.cshtml
+++ b/Crunchers/Views/Admin/ManageShop.cshtml
@@ -20,8 +20,8 @@
       }
       
       .clean-block.dark {
-        background-color: #f6f6f6;
-      }
+              background-color: #ffffff;
+            }
       
       .container {
         max-width: 1140px;
