--- a/Crunchers/Views/Admin/ManageShop.cshtml
+++ b/Crunchers/Views/Admin/ManageShop.cshtml
@@ -74,6 +74,9 @@
       
       .clean-block .block-content {
         padding: 40px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
       }
       
       .clean-block .block-content, .clean-block .content {
